cabal-version:      3.0
name:               stm-starvation

version:            0.1.0.0
maintainer:         Xander van der Goot
build-type:         Simple

extra-doc-files:    README

common opt
    ghc-options:
      -Wall -Wpartial-fields -O2 -rtsopts -debug -threaded -Wunused-packages
      "-with-rtsopts=-N"
    build-depends:
      async,
      base,
      stm,

executable list
    import:           opt
    main-is:          List.hs
    hs-source-dirs:   app
    default-language: Haskell2010

executable map
    import:           opt
    main-is:          Map.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
      stm-containers,
      list-t
